syntax = "proto3";

import "protos/common.proto";

option go_package = "github.com/nivista/steady/internal/.gen/protos/messaging";

message CreateTimer {
    Task task = 1;
    Schedule schedule = 2;
    Meta meta = 3;
}

message ExecuteTimer {
    Progress progress = 1;
}

message Key {
    message CreateTimer {
        string domain = 1;
        string timer_uuid = 2;
    }

    message ExecuteTimer {
        string domain = 1;
        string timer_uuid = 2;
    }

    message Dummy{}

    oneof key {
        CreateTimer createTimer = 1;
        ExecuteTimer executeTimer = 2;
        Dummy dummy = 3;
    }
}